--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,9 @@
 [tool.poetry]
 name = "textual-pandas"
-version = "0.1.0"
-description = ""
-authors = ["Danny Wade <danny.wade35@gmail.com>"]
+homepage = "https://github.com/dannywade/textual-pandas"
+version = "0.2.0"
+description = "A module to build Textual widgets that represent data from the Pandas library"
+authors = ["Dan Wade <danny.wade35@gmail.com>"]
 license = "MIT"
 readme = "README.md"
 packages = [{include = "textual_pandas"}]
