--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,9 +9,9 @@ readme = "README.md"
 packages = [{include = "textual_pandas"}]
 
 [tool.poetry.dependencies]
-python = "^3.9"
-textual = "^0.23.0"
-pandas = "^2.0.1"
+python = ">=3.8,<4.0"
+textual = "<=0.58.0, >=0.23.0"
+pandas = "<=2.2.2"
 
 [build-system]
 requires = ["poetry-core"]
