--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,8 +10,8 @@ packages = [{include = "textual_pandas"}]
 
 [tool.poetry.dependencies]
 python = ">=3.8,<4.0"
-textual = "<=0.58.0, >=0.23.0"
-pandas = "<=2.2.2"
+textual = "<4.0, >=0.23.0"
+pandas = "<=2.2.3"
 
 [build-system]
 requires = ["poetry-core"]
